# swaggerConfig.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.0.0",
+  "openapi": "3.0.3",
   "info": {
     "version": "1.3.0",
     "title": "CEP Labs",
@@ -21,12 +21,61 @@
       "description": "Local server"
     }
   ],
+  "components": {
+    "securitySchemes": {
+      "api_key": {
+        "type": "http",
+        "in": "header",
+        "name": "x-access-token",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
   "tags": [
+    {
+      "name": "USUÁRIO"
+    },
     {
       "name": "CEP"
     }
   ],
   "paths": {
+    "/login": {
+      "post": {
+        "tags": [
+          "USUÁRIO"
+        ],
+        "description": "Efeturar login",
+        "operationId": "login",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "user": {
+                    "type": "string"
+                  },
+                  "pwd": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Login efetuado"
+          },
+          "500": {
+            "description": "Login inválido"
+          }
+        }
+      }
+    },
     "/ceps/{id}": {
       "get": {
         "tags": [
@@ -90,9 +139,15 @@
           "400": {
             "description": "CEP inválido"
           },
+          "401": {
+            "description": "Não autorizado"
+          },
           "404": {
             "description": "Objeto não encontrado"
           }
+        },
+        "security": {
+          "api_key": []
         }
       }
     }
